applyRotation seems broken in blender-current #37325

Closed
opened 2013-11-05 11:26:32 +01:00 by Arnaud Degroote · 10 comments

Category: Physics

%%%I upgraded my blender to post-bge cleanup, and it seems that some stuff has been broken in the meantime.
In particular, applyRotation make objects turns in the wrong sense (go to the right when it is supposed to go left, and vice-versa).
setAngularVelocity behaviour do not change.I suppose it is related to svn commit 61096.

Best regards,%%%

**Category**: Physics %%%I upgraded my blender to post-bge cleanup, and it seems that some stuff has been broken in the meantime. In particular, applyRotation make objects turns in the wrong sense (go to the right when it is supposed to go left, and vice-versa). setAngularVelocity behaviour do not change.I suppose it is related to svn commit 61096. Best regards,%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%In the attached file (applyRotation.blend), KX_GameObject.applyRotation((0, 0, 0.1)) seems to work correctly. Could you please provide a blendfile demonstrating your problem?%%%

%%%In the attached file (applyRotation.blend), KX_GameObject.applyRotation((0, 0, 0.1)) seems to work correctly. Could you please provide a blendfile demonstrating your problem?%%%

%%%After some tests using the provided scenes and some other scene, it seems the issue is not in applyRotation.

There is still a global change in the behaviour of Blender between 2.69 and blender-current, where our 'robot' turns in the opposite sense (with the same code base). We are in the process to create a minimal blender example which show the issue, but it is a bit more complex than expected. We keep you informed.%%%

%%%After some tests using the provided scenes and some other scene, it seems the issue is not in applyRotation. There is still a global change in the behaviour of Blender between 2.69 and blender-current, where our 'robot' turns in the opposite sense (with the same code base). We are in the process to create a minimal blender example which show the issue, but it is a bit more complex than expected. We keep you informed.%%%

%%%Please find in attachement a scene showing the problem. If you run the scene in blender-2.69 and in blender-current, you will see that the robot moves in opposite direction.
If there are any issue with the scene, let me know, I try to remove all our stuff, but I may miss something.%%%

%%%Please find in attachement a scene showing the problem. If you run the scene in blender-2.69 and in blender-current, you will see that the robot moves in opposite direction. If there are any issue with the scene, let me know, I try to remove all our stuff, but I may miss something.%%%

%%%Try to really attach the scene%%%

%%%Try to really attach the scene%%%

Looks like the bug specifically applies to objects using the rigid body physics type. That should help narrow it down.

Looks like the bug specifically applies to objects using the rigid body physics type. That should help narrow it down.

This issue was referenced by blender/blender-addons-contrib@537f28fc0e

This issue was referenced by blender/blender-addons-contrib@537f28fc0eba79fd735c71eeaec17e387b4629c3

This issue was referenced by 537f28fc0e

This issue was referenced by 537f28fc0eba79fd735c71eeaec17e387b4629c3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 537f28fc0e.

Closed by commit 537f28fc0e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37325
No description provided.