Fix T37325: applyRotation() wasn't working correctly on rigid bodies in the game engine.

During the physics cleanup/refactor, the rotation matrix in
CcdPhysicsController::RelativeRotate() became transposed.